[package]
name = "oxygengine-ignite"
version = "0.7.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "CLI app used to setup and develop Oxygen Engine projects"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-ignite"
readme = "../README.md"
maintenance = { status = "actively-developed" }

[dependencies]
clap = "2.33"
cargo_metadata = "0.8"
toml = "0.5"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oxygengine-build-tools = { version = "0.7", path = "../oxygengine-build-tools" }
dirs = "2.0"
reqwest = { version = "0.10", features = ["blocking"] }
chrobry-core = "1.1"
