[package]
name = "oxygengine-ignite"
version = "0.12.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "CLI app used to setup and develop Oxygen Engine projects"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-ignite"
readme = "../README.md"

[dependencies]
clap = "2.33"
cargo_metadata = "0.10"
toml = "0.5"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oxygengine-build-tools = { version = "0.12", path = "../oxygengine-build-tools" }
dirs = "2.0"
reqwest = { version = "0.10", features = ["blocking"] }
chrobry-core = "1"
warp = "0.2"
tokio = { version = "0.2", features = ["macros"] }
hotwatch = "0.4"
open = "1.4"
