[package]
name = "oxygengine-ignite"
version = "0.17.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "CLI app used to setup and develop Oxygen Engine projects"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-ignite"
readme = "../README.md"

[dependencies]
clap = "2.33"
cargo_metadata = "0.11"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
serde_yaml = "0.8"
ron = "0.6"
oxygengine-build-tools = { version = "0.17", path = "../oxygengine-build-tools" }
oxygengine-ignite-types = { version = "0.17", path = "../oxygengine-ignite-types" }
dirs = "3.0"
reqwest = { version = "0.10", features = ["blocking"] }
chrobry-core = "1"
warp = "0.2"
tokio = { version = "0.2", features = ["macros"] }
hotwatch = "0.4"
open = "1.4"
