[package]
name = "oxygengine-input-device-web"
version = "0.5.3"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Web input devices module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-input-device-web"
readme = "../README.md"

[dependencies]
oxygengine-core = { version = "0.5", path = "../oxygengine-core" }
oxygengine-input = { version = "0.5", path = "../oxygengine-input" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'Window',
  'MouseEvent',
  'KeyboardEvent',
  'EventTarget',
]
