[package]
name = "oxygengine-input"
version = "0.3.9"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Input module for Oxygen Engine"
license = "MIT"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-input"
readme = "../README.md"

[dependencies]
oxygengine-core = { version = "0.3", path = "../oxygengine-core" }
