[package]
name = "oxygengine-input"
version = "0.4.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Input module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-input"
readme = "../README.md"

[features]
parallel = ["oxygengine-core/parallel"]

[dependencies]
oxygengine-core = { version = "0.4", path = "../oxygengine-core" }
