[package]
name = "oxygengine-integration-p2d-cr"
version = "0.11.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Integration module of 2D physics and composite rendering for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-integration-p2d-cr"
readme = "../README.md"

[features]
web = [
  "oxygengine-core/web",
  "oxygengine-physics-2d/web",
  "oxygengine-composite-renderer/web",
]
parallel = [
  "oxygengine-core/parallel",
  "oxygengine-physics-2d/parallel",
  "oxygengine-composite-renderer/parallel",
]
scalar64 = [
  "oxygengine-core/scalar64",
  "oxygengine-physics-2d/scalar64",
  "oxygengine-composite-renderer/scalar64",
]

[dependencies]
oxygengine-core = { version = "0.11", path = "../oxygengine-core" }
oxygengine-physics-2d = { version = "0.11", path = "../oxygengine-physics-2d" }
oxygengine-composite-renderer = { version = "0.11", path = "../oxygengine-composite-renderer" }
serde = { version = "1", features = ["derive"] }
