[package]
name = "oxygengine-integration-ui-cr"
version = "0.17.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Integration module of user interface and composite rendering for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-integration-ui-cr"
readme = "../README.md"

[features]
web = [
  "oxygengine-core/web",
  "oxygengine-user-interface/web",
  "oxygengine-composite-renderer/web",
]
parallel = [
  "oxygengine-core/parallel",
  "oxygengine-user-interface/parallel",
  "oxygengine-composite-renderer/parallel",
]
scalar64 = [
  "oxygengine-core/scalar64",
  "oxygengine-user-interface/scalar64",
  "oxygengine-composite-renderer/scalar64",
]

[dependencies]
oxygengine-core = { version = "0.17", path = "../oxygengine-core" }
oxygengine-user-interface = { version = "0.17", path = "../oxygengine-user-interface" }
oxygengine-composite-renderer = { version = "0.17", path = "../oxygengine-composite-renderer" }
serde = { version = "1", features = ["derive"] }
