[package]
name = "oxygengine-integration-vn-ui"
version = "0.20.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Integration module of visual novel and user interface for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-integration-vn-ui"
readme = "../README.md"

[features]
web = [
  "oxygengine-core/web",
  "oxygengine-animation/web",
  "oxygengine-visual-novel/web",
  "oxygengine-user-interface/web",
]
parallel = [
  "oxygengine-core/parallel",
  "oxygengine-animation/parallel",
  "oxygengine-visual-novel/parallel",
  "oxygengine-user-interface/parallel",
]
scalar64 = [
  "oxygengine-core/scalar64",
  "oxygengine-animation/scalar64",
  "oxygengine-visual-novel/scalar64",
  "oxygengine-user-interface/scalar64",
]

[dependencies]
oxygengine-core = { version = "0.20", path = "../oxygengine-core" }
oxygengine-animation = { version = "0.20", path = "../oxygengine-animation" }
oxygengine-visual-novel = { version = "0.20", path = "../oxygengine-visual-novel" }
oxygengine-user-interface = { version = "0.20", path = "../oxygengine-user-interface" }
serde = { version = "1", features = ["derive"] }
