[package]
name = "oxygengine-js"
version = "0.12.5"
edition = "2018"
build = "build.rs"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

[features]
default = ["console_error_panic_hook"]

[build-dependencies]
oxygengine-build-tools = { version = "0.12", path = "../oxygengine-build-tools" }

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.oxygengine]
version = "0.12"
features = ["web-composite-game", "script-web"]
path = "../"
