[package]
name = "oxygengine-navigation"
version = "0.4.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Navigation module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-navigation"
readme = "../README.md"

[features]
parallel = ["oxygengine-core/parallel"]

[dependencies]
oxygengine-core = { version = "0.4", path = "../oxygengine-core" }
petgraph = "0.4"
spade = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"
