[package]
name = "oxygengine-navigation"
version = "0.5.5"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Navigation module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-navigation"
readme = "../README.md"

[features]
parallel = ["oxygengine-core/parallel", "navmesh/parallel"]

[dependencies]
oxygengine-core = { version = "0.5", path = "../oxygengine-core" }
navmesh = "0.7"
serde = { version = "1", features = ["derive"] }
bincode = "1"
