[package]
name = "oxygengine-network-backend-desktop"
version = "0.4.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Network Desktop backend module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-network-backend-desktop"
readme = "../README.md"

[features]
parallel = ["oxygengine-core/parallel"]

[dependencies]
oxygengine-core = { version = "0.4", path = "../oxygengine-core" }
byteorder = "1.3"
ws = "0.8"

[dependencies.oxygengine-network]
version = "0.4"
path = "../oxygengine-network"
