[package]
name = "oxygengine-network-backend-desktop"
version = "0.12.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Network Desktop backend module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-network-backend-desktop"
readme = "../README.md"

[features]
web = ["oxygengine-core/web", "oxygengine-network/web"]
parallel = ["oxygengine-core/parallel", "oxygengine-network/parallel"]
scalar64 = ["oxygengine-core/scalar64", "oxygengine-network/scalar64"]

[dependencies]
oxygengine-core = { version = "0.12", path = "../oxygengine-core" }
oxygengine-network = { version = "0.12", path = "../oxygengine-network" }
byteorder = "1.3"
ws = "0.9"
