[package]
name = "oxygengine-network-backend-native"
version = "0.3.17"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Network Native backend module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-network-backend-native"
readme = "../README.md"

[features]
parallel = ["oxygengine-core/parallel"]

[dependencies]
oxygengine-core = { version = "0.3", path = "../oxygengine-core" }
byteorder = "1.3"

[dependencies.oxygengine-network]
version = "0.3"
path = "../oxygengine-network"
