[package]
name = "oxygengine-network-backend-native"
version = "0.8.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Network Native backend module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-network-backend-native"
readme = "../README.md"

[features]
web = ["oxygengine-core/web", "oxygengine-network/web"]
parallel = ["oxygengine-core/parallel", "oxygengine-network/parallel"]
scalar64 = ["oxygengine-core/scalar64", "oxygengine-network/scalar64"]

[dependencies]
oxygengine-core = { version = "0.8", path = "../oxygengine-core" }
oxygengine-network = { version = "0.8", path = "../oxygengine-network" }
byteorder = "1.3"
