[package]
name = "oxygengine-network-backend-web"
version = "0.4.4"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Network Web backend module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-network-backend-web"
readme = "../README.md"

[dependencies]
wasm-bindgen = "0.2"
oxygengine-core = { version = "0.4", path = "../oxygengine-core" }
byteorder = "1.3"
js-sys = "0.3"

[dependencies.oxygengine-network]
version = "0.4"
path = "../oxygengine-network"

[dependencies.web-sys]
version = "0.3"
features = [
  'Window',
  'WebSocket',
  'BinaryType',
  'Event',
  'MessageEvent',
]
