[package]
name = "oxygengine-network-backend-web"
version = "0.19.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Network Web backend module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-network-backend-web"
readme = "../README.md"

[features]
default = ["web"]
web = ["oxygengine-core/web", "oxygengine-network/web"]
scalar64 = ["oxygengine-core/scalar64", "oxygengine-network/scalar64"]

[dependencies]
oxygengine-core = { version = "0.19", path = "../oxygengine-core" }
oxygengine-network = { version = "0.19", path = "../oxygengine-network" }
wasm-bindgen = "0.2"
byteorder = "1.3"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Window',
  'WebSocket',
  'BinaryType',
  'Event',
  'MessageEvent',
]
