[package]
name = "oxygengine-network"
version = "0.13.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Network module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-network"
readme = "../README.md"

[features]
web = ["oxygengine-core/web"]
parallel = ["oxygengine-core/parallel"]
scalar64 = ["oxygengine-core/scalar64"]

[dependencies]
oxygengine-core = { version = "0.13", path = "../oxygengine-core" }
