[package]
name = "oxygengine-physics-2d"
version = "0.7.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "2D physics module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-physics-2d"
readme = "../README.md"

[features]
web = ["oxygengine-core/web"]
parallel = ["oxygengine-core/parallel"]
scalar64 = ["oxygengine-core/scalar64"]

[dependencies]
oxygengine-core = { version = "0.7", path = "../oxygengine-core" }
serde = { version = "1", features = ["derive"] }

[dependencies.ncollide2d]
version = "0.21"
default-features = false
features = ["dim2", "serde-serialize"]

[dependencies.nphysics2d]
version = "0.13"
default-features = false
features = ["dim2", "use-wasm-bindgen"]
