[package]
name = "oxygengine-procedural"
version = "0.3.10"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Procedural content generation module for Oxygen Engine"
license = "MIT"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-procedural"
readme = "../README.md"

[dependencies]
oxygengine-utils = { version = "0.3", path = "../oxygengine-utils" }
psyche-utils = "0.2"
