[package]
name = "oxygengine-procedural"
version = "0.4.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Procedural content generation module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-procedural"
readme = "../README.md"

[features]
parallel = ["oxygengine-utils/parallel", "rayon"]

[dependencies]
oxygengine-utils = { version = "0.4", path = "../oxygengine-utils" }
psyche-utils = "0.2"
rayon = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
