[package]
name = "oxygengine-procedural"
version = "0.12.5"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Procedural content generation module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-procedural"
readme = "../README.md"

[features]
parallel = ["oxygengine-utils/parallel", "rayon"]
scalar64 = ["oxygengine-utils/scalar64"]

[dependencies]
oxygengine-utils = { version = "0.12", path = "../oxygengine-utils" }
psyche-utils = "0.2"
rayon = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rand = "0.7"
