[package]
name = "oxygengine-script-flow"
version = "0.12.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Visual graph scripting module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-script-flow"
readme = "../README.md"

[features]
web = ["oxygengine-core/web"]
parallel = ["oxygengine-core/parallel"]
scalar64 = ["oxygengine-core/scalar64"]

[dependencies]
oxygengine-core = { version = "0.12", path = "../oxygengine-core" }
serde = { version = "1", features = ["derive"] }
petgraph = "0.5"
